--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 
-    <script src="./operators.js"></script>
+    <!-- <script src="./operators.js"></script> -->
+    <script src="./if-else.js"></script>
 </body>
 </html>
