--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
     <!-- <script src="./operators.js"></script> -->
-    <script src="./if-else.js"></script>
+    <!-- <script src="./if-else.js"></script> -->
+    <script src="./short-circle.js"></script>
 </body>
 </html>
