--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Strings</h1>
-    
+    <h3>Operators - Conditions</h3>
 
 
 
 
-    <script src="./strings.js"></script>
+    <!-- <script src="./operators.js"></script> -->
+    <!-- <script src="./if-else.js"></script> -->
+    <script src="./short-circle.js"></script>
 </body>
 </html>
