--- a/Variables/index.html
+++ b/Variables/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Arrays (Diziler)</h1>
+    <h1>Strings</h1>
+    
 
 
-    <script src="./array.js"></script>
+
+
+    <script src="./strings.js"></script>
 </body>
 </html>
