--- a/Event/index.html
+++ b/Event/index.html
@@ -31,7 +31,7 @@
     </section>
   </main>
 
-  <script src="./createNode.js"></script>
+  <script src="./events.js"></script>
   <!-- <script src="event.js"></script> -->
 </body>
 
